tests/invalid/assign_to_const_struct_field.lang
typedef Struct struct {
    a: i32
};

const const_struct = Struct {12};

extern fn main() i32 {
    const_struct.a = 123;

    return 0;
}
